--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Pokedex</title>
         <link href="styles.css" rel="stylesheet">
+        <link href="border_cards.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     </head>
     <body>
